SPM code abbreviations for u in B criteria

--- a/app/views/pages/b_praxis.html.erb
+++ b/app/views/pages/b_praxis.html.erb
@@ -295,10 +295,31 @@
 
               <p>The second (<em>q</em> with a slash on the descender) appears 28 times and is always resolved <em>q[ui]</em>, as attested by other forms of the same words in complete form for the most part, with 8 of those <em>qui</em> alone. The first (<em>q</em> with <em>i</em> above the line) appears 17 times and is resolved in <em>q[ui]</em> when subject. <em>q[ui]</em> alone can represent relative pronouns as subject ("who"); demonstrative pronouns (since <em>qui</em> also stands for the palatalized Modern Italian <em>quelli</em>, MSF <em>ceux</em>); the interrogative for a person; and the proverbial pronoun "he/she who." Other abbreviated forms—relative pronoun direct object, the conjunction, an interrogative for a thing or fact—are resolved <em>q[ue]</em>. Where the <em>u</em> is already present and the q bears an abbreviation, the final vowel follows the same rule. This means that 523 <em>q</em> with a dot or similar designation above were expanded as <em>q[ue]</em> in addition to those surmounted by an <em>i</em>. In Old French itself usage was not regular; Ménard notes that dialectal usage varied and is expliquable.<!-- FN: Philippe Ménard, Manuel du français du moyen âge, 1. syntaxe de l'ancien français (Sobodi, 1973), ¶64, "Remarques," p. 80. --></p>
 
+              <h4 class="praxis"></h4>
               <table>
               <tr>
-                  <td></td>
-                  <td></td>
+                  <td>[u]</td>
+                  <td><em>acq[u]isons</em> (aquis 3 appearances); <em>q[u]e</em> (que 1089 appearances); <em>q[u]erant</em> (<em>querent</em> 2 appearances); <em>q[u]i</em> (<em>qui</em> 687 appearances)</td>
+              </tr>
+              <tr>
+                <td>[u']</td>
+                <td>Where the <em>q</em> surmounted by an <em>i</em> precedes a word beginning with an <em>i</em> (vv. 501, 507) and <em>jusq[u']a</em> (v. 4613)</td>
+              </tr>
+              <tr>
+                <td>[ue]</td>
+                <td><em>adon/[n]q[ue]</em> (9 from crossed q, see also ӡ below;  <em>adonque</em> 5 appearances); <em>auq[ue]s</em> (6 from crossed <em>q</em>, see also ӡ below; <em>auque/s</em> 10 appearances); <em>aveq[ue]/cq[ue]</em> (21 with crossed <em>q</em>, see also ӡ  below; <em>avec</em> 1 appearance; <em>avech</em> 39 appearances; <em>aveque</em> 1 appearance); <em>donq[ue]</em> (6 from crossed <em>q</em>, see also ӡ  below; <em>donque</em> 10 appearances); <em>enfraciq[ue]</em>, <em>fraciq[ue]</em> (one with crossed <em>q</em>, and both with crossed <em>q</em>, respectively; see also ӡ below; <em>enfracique</em>, <em>fracique</em> 1 appearance each); <em>enq[ue]ste</em> (<em>enqueste</em> 6 appearances); <em>finq[ue]</em> (<em>finqe</em> v. 1947); <em>ilueq[ue]</em> (<em>iluec</em>, <em>iluech</em>, <em>iloc</em>, <em>iloch</em> 1 appearance each); <em>onq[ue]/s</em> (1/10 appearances, respectively; <em>onque/s</em> 23 appearances); <em>oq[ue]ison/s</em> (7 appearances; <em>oqueison/nt/ns</em> 5 appearances, also <em>oqeison</em> 3 appearances); <em>orq[ue]nois</em> (1 appearance; <em>orquenoy</em>* v. 1239); <em>plaq[ue]</em> (v. 7966; cf. <em>Geste Francor</em>, v. 3167 <em>plaqe</em>, 3rd person; cf. Latin PLACERE; DELI <em>piacere</em>), <em>q[ue]l/le</em> (<em>quel</em>, <em>quele</em>, <em>quela</em>, <em>quelle</em> 41, 2, 1, 3 appearances); <em>q[ue]ran/[n]t</em>, <em>q[ue]re</em>, <em>q[ue]ste</em> and other forms of that verb and related nouns (<em>quera</em>, <em>querant</em>, <em>quera</em>, etc.); <em>q[ue]relle</em> (<em>querelle</em> 5 appearances); <em>req[ue]rie</em> and other forms of the verb <em>requerir</em> (<em>requeri</em>, <em>requert</em>, <em>requerir</em>, etc.)</td>
+              </tr>
+              <tr>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <td></td>
+                <td></td>
               </tr>
               </table>
         	</table>
