SPM add more to B criteria

--- a/app/views/pages/b_praxis.html.erb
+++ b/app/views/pages/b_praxis.html.erb
@@ -263,7 +263,7 @@
               </tr>
               </table>
 
-              <h4 class="praxis">p' (p with an apostrophe over it) <%= image_tag("b-pst-abbr.png", alt: "b-pst-abbr") %>(v. 9894) <%= image_tag("b-pmer-abbr.png", alt: "b-pmer-abbr") %>(v. 9907). <br>
+              <h4 class="praxis">p' (p with an apostrophe over it) <%= image_tag("b-pst-abbr.png", alt: "b-pst-abbr") %>(v. 9894) <%= image_tag("b-pmer-abbr.png", alt: "b-pmer-abbr") %>(v. 9907).</h4>
               <h4 class="praxis">p with "i" over it, alternate</h4>
               <table>
               <tr>
@@ -310,17 +310,57 @@
                 <td><em>adon/[n]q[ue]</em> (9 from crossed q, see also ӡ below;  <em>adonque</em> 5 appearances); <em>auq[ue]s</em> (6 from crossed <em>q</em>, see also ӡ below; <em>auque/s</em> 10 appearances); <em>aveq[ue]/cq[ue]</em> (21 with crossed <em>q</em>, see also ӡ  below; <em>avec</em> 1 appearance; <em>avech</em> 39 appearances; <em>aveque</em> 1 appearance); <em>donq[ue]</em> (6 from crossed <em>q</em>, see also ӡ  below; <em>donque</em> 10 appearances); <em>enfraciq[ue]</em>, <em>fraciq[ue]</em> (one with crossed <em>q</em>, and both with crossed <em>q</em>, respectively; see also ӡ below; <em>enfracique</em>, <em>fracique</em> 1 appearance each); <em>enq[ue]ste</em> (<em>enqueste</em> 6 appearances); <em>finq[ue]</em> (<em>finqe</em> v. 1947); <em>ilueq[ue]</em> (<em>iluec</em>, <em>iluech</em>, <em>iloc</em>, <em>iloch</em> 1 appearance each); <em>onq[ue]/s</em> (1/10 appearances, respectively; <em>onque/s</em> 23 appearances); <em>oq[ue]ison/s</em> (7 appearances; <em>oqueison/nt/ns</em> 5 appearances, also <em>oqeison</em> 3 appearances); <em>orq[ue]nois</em> (1 appearance; <em>orquenoy</em>* v. 1239); <em>plaq[ue]</em> (v. 7966; cf. <em>Geste Francor</em>, v. 3167 <em>plaqe</em>, 3rd person; cf. Latin PLACERE; DELI <em>piacere</em>), <em>q[ue]l/le</em> (<em>quel</em>, <em>quele</em>, <em>quela</em>, <em>quelle</em> 41, 2, 1, 3 appearances); <em>q[ue]ran/[n]t</em>, <em>q[ue]re</em>, <em>q[ue]ste</em> and other forms of that verb and related nouns (<em>quera</em>, <em>querant</em>, <em>quera</em>, etc.); <em>q[ue]relle</em> (<em>querelle</em> 5 appearances); <em>req[ue]rie</em> and other forms of the verb <em>requerir</em> (<em>requeri</em>, <em>requert</em>, <em>requerir</em>, etc.)</td>
               </tr>
               <tr>
-                <td></td>
-                <td></td>
-              </tr>
-              <tr>
-                <td></td>
-                <td></td>
-              </tr>
-              <tr>
-                <td></td>
-                <td></td>
+                <td>[ui]</td>
+                <td>for <em>q</em> with a slash on the descender. <em>conq[ui]sons</em> (cf. <em>conquis</em>, <em>conquist</em> 4, 2 appearances); <em>delinq[ui]re</em> (v. 3026);  <em>nasq[ui]</em> (<em>nasqui</em>, 3 appearances); <em>plaq[ui]ment</em> (<em>plaquiment/[n]t</em> 4 appearances); <em>q[ui]d</em> in Latin quote (see Lewis & Short <em>quis</em>, <em>quid</em>); <em>q[ui]ert</em> (<em>quiert</em> 10 appearances); <em>q[ui]s</em> (<em>quis 4 appearances); <em>req[ui]e[r]</em> (<em>requier 20 appearances); <em>sorq[ui]die (TL <em>sorquidier/<em>sorcuidier); <em>tra[n]q[ui]lima[n]t</em> (TL <em>tranquilité</em>; DELI <em>tranquillo</em>)</td>
               </tr>
               </table>
+
+              <h4 class="praxis"><b>qnt</b> with two dots over the <em>n</em> <%= image_tag("b-qnt-abbr.png", alt: "b-qnt-abbr.png") %> (v. 4718)</h4>
+              <table>
+                <tr>
+                <td><em>q[ua]nt</em> is expanded from <em>qnt</em> with the two dots over the <em>n</em> 13 times (2263, 4718, 4721, 4729, 4764, 4770, 4790, 4806, 4809, 4895, 4931, 7999, 8119).  It is interesting that a group of these are all in the same section of the MS., the Ynide episode (132 <em>quant</em>; 391 <em>qua[n]t)</em></td>
+                </tr>
+              </table>
+
+              <h4 class="praxis">sce (with line over the <em>e</em>) <%= image_tag("b-sce-abbr.png", alt: "b-sce-abbr.png") %> (v. ???)</h4>
+              <table>
+                <tr>
+                <td><em>s[ain]c[t]e</em> (11 appearances; e.g., v. 1557, above); cf. <em>saint</em> (12 appearances), <em>sainte</em> (1 appearance)</td>
+                </tr>
+              </table>
+
+              <h4 class="praxis">ʃ with loop <%= image_tag("b-sius-abbr.png", alt: "b-sius-abbr.png") %> (v. 7945)</h4>
+              <table>
+              <tr>
+              <td><em>s[er]gians/t</em>; <em>s[er]mon</em> and forms of the verb and nouns related to it; <em>s[er]pant</em>, <em>s[er]pent</em>; <em>s[er]ve</em> and forms of the verb and nouns related to it</td>
+              </tr>
+              </table>
+
+              <h4 class="praxis">vre <%= image_tag("b-vre-abbr.png", alt: "b-vre-abbr.png") %> (v. 12014)</h4>
+              <table>
+              <tr>
+              <td><em>v[est]re</em>, 56 appearances: <em>vetre</em> 37, <em>vestre</em> 32, <em>vostre</em> 6, that is 37 without <em>–s-</em> and 38 with <em>–s-</em>, and 69 with <em>–e-</em> vs. 6 with <em>–o-</em>. Since the form is very close and similar to <em>notre/nostre</em>, we follow the usage there, expanding with the <em>–es-</em>.</td>
+              </tr>
+              </table>
+
+              <h4 class="praxis">.W.</h4>
+              <table>
+              <tr>
+              <td>no complete forms. <em>W[illame]</em>, 33 appearances; W'll'ame: <em>W[i]ll[a]me</em> (6 appearances, vv. 9171, 9325, 9700, 9750, 10139, 10160); Wi'ame: <em>Wi[ll]ame</em> (once v. 7945); W'll'e: <em>W[i]ll[am]e</em> (once, v. 9332); Will'me: <em>Will[a]me</em> (once v. 9155); W'lla'me: <em>W[i]lla[u]me</em> (once, v. 11547). See Guill'e, above.</td>
+              </tr>
+              </table>
+
+
+              
         	</table>
         </div>
+
+
+
+
+
+
+
+
+
+
