SPM add versioning and cite pages to about tab

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,8 +1,11 @@
 <div>
 
       <ul class="nav">
+
         <li class="title"><%= link_to "Huon d'Auvergne Digital Archive", root_path(), class: "nav" %></li>
+
         <li><%= link_to 'Bibliography', bibliography_path(), class: "nav" %></a></li>
+
         <li class="dropdown">
           <a class="nav" href="javascript:void(0)" class="dropbtn">Editions</a>
           <div class="dropdown-content">
@@ -14,6 +17,7 @@
             <!-- <a class="nav" href="#"><%= link_to 'Hell Scene Comparison', hell_scene_path() %></a> -->
           </div>
         </li>
+
         <li class="dropdown">
           <a class="nav" href="javascript:void(0)" class="dropbtn">Praxis</a>
           <div class="dropdown-content">
@@ -24,7 +28,15 @@
             <a class="nav" href="#"><%= link_to 'Encoding Guidelines', encod_praxis_path() %></a>
           </div>
         </li>
-        <li><a class="nav" href="#">About</a></li>
+
+        <li class="dropdown">
+          <a class="nav" href="javascript:void(0)" class="dropbtn">About</a>
+          <div class="dropdown-content">
+            <a class="nav" href="#"><%= link_to 'Versioning', versioning_path() %></a>
+            <a class="nav" href="#"><%= link_to 'Cite our work', cite_path() %>
+          </div>
+        </li>
+      
       </ul>
 
 </div>
