--- a/app/views/pages/versioning.erb
+++ b/app/views/pages/versioning.erb
@@ -16,30 +16,28 @@
 
       <p>We version our website according to the standards of Semantic Versioning, described in <a href="http://semver.org/">this document.</a></p>
 
-    <h2 class="praxis">Version 1.0.0 Statement</h2>
+  <h2 class="praxis">Version 1.0.0 Statement</h2>
 
-      <p>Version 1.0.0 of the Huon Digital Archive consists of a base transcription of all four Huon d’Auvergne textual witnesses. Displayed publically are 25-laisse excerpts of all four editions and the English translation. The editorial criteria used to establish the editions will evolve as the team continues its research and, for this reason, all scholars citing our work must indicate the version number. We recommend contacting us directly to inquire if corrections have been made to the segment you wish to cite. We will provide access to the development site in which the texts appear in their entirety to scholars who request it.</p>
+    <p>Version 1.0.0 of the Huon Digital Archive consists of a base transcription of all four Huon d’Auvergne textual witnesses. Displayed publically are 25-laisse excerpts of all four editions and the English translation. The editorial criteria used to establish the editions will evolve as the team continues its research and, for this reason, all scholars citing our work must indicate the version number. We recommend contacting us directly to inquire if corrections have been made to the segment you wish to cite. We will provide access to the development site in which the texts appear in their entirety to scholars who request it.</p>
 
-      <p>The first public version (1.0.0) of the Huon d’Auvergne Digital Archive includes the following functionality:</p>
+    
+    <dl>
+      <dt>The first public version (1.0.0) of the Huon d’Auvergne Digital Archive includes the following functionality:</dt>
+        <dd>A representative sample segment (25-laisses) of each of the four extant versions of Huon d’Auvergne, a Franco-Italian romance epic;</dd>
+        <dd>A corresponding 25-laisse segment of the English translation;</dd>
+        <dd>An interface that demonstrates future goals of the projects, namely an interactive digital facsimile of each manuscript;</dd>
+        <dd>A navigation bar to interact with textual characteristics of each manuscript (scribal activity, editorial intervention, Pio Rajna’s notebooks);</dd>
+        <dd>An outline of editorial criteria;</dd>
+        <dd>An outline of encoding guidelines;</dd>
+        <dd>A static bibliography (which will be interactive in future versions);</dd>
+        <dd>A mock-up of a segment of the Huon Hell scene programmed in Versioning Machine.</dd>
 
-        <ol class="praxis">
+     </dl>
 
-          <li class="praxis">A representative sample segment (25-laisses) of each of the four extant versions of Huon d’Auvergne, a Franco-Italian romance epic;</li>
-          <li class="praxis">A corresponding 25-laisse segment of the English translation;</li>
-          <li class="praxis">An interface that demonstrates future goals of the projects, namely an interactive digital facsimile of each manuscript;</li>
-          <li class="praxis">A navigation bar to interact with textual characteristics of each manuscript (scribal activity, editorial intervention, Pio Rajna’s notebooks);</li>
-          <li class="praxis">An outline of editorial criteria;</li>
-          <li class="praxis">An outline of encoding guidelines;</li>
-          <li class="praxis">A static bibliography (which will be interactive in future versions);</li>
-          <li class="praxis">A mock-up of a segment of the Huon Hell scene programmed in Versioning Machine.</li>
-
-        </ol>
-
-
-
-
-
-
+      <hr>
 </div>
 </body>
+
+<%= render 'layouts/footer' %>
+
 </html>
