SPM add bibliography

--- a/app/views/pages/bibliography.html.erb
+++ b/app/views/pages/bibliography.html.erb
@@ -1,10 +1,168 @@
 
-<!--main content-->
+<!DOCTYPE html>
+<html class="biblio" xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+
+    <head>
+        <meta charset="utf-8" />
+        <meta name="description" content="Huon d'Auvergne Bibliography"/>
+        <meta name="viewport" content="initial-scale=1.0, width=device-width" />
+        <title>Huon Bibliography</title>
+    </head>
+
+<body>
+
+<h1 class="biblio">Complete Bibliography for <em>Huon d'Auvergne</em></h1>
+
+
+<div class="biblio">
+<h2 class="biblio">Manuscripts</h2>
+
+<ol class="biblio">
+<li class="biblio">Huon d’Auvergne. 1341. Kupferstichkabinett 78 D 8 (olim Ms. Hamilton 337). Berlin.</li>
+<li class="biblio">Huon d’Auvergne. N.d. Biblioteca del seminario Ms. 32. Padua.</li>
+<li class="biblio">Huon d’Auvergne. N.d. Biblioteca dell’Archiginnasio B. 3429. Bologna.</li>
+<li class="biblio">Huon d’Auvergne. 1441. Biblioteca Nazionale N.III.19. Turin.</li>
+<li class="biblio">Michelagnolo (Michelangelo) da Volterra. Huon d'Auvergne. 1487-88. Biblioteca Laurenziana. Med. Palat. 82.</li>
+</ol>
+</div>
+
+
+<div class="biblio">
+<h2 class="biblio">Reference works</h2> 
+<p class="biblio">(In <b>BOLD</b> are standard abbreviations used in the field for reference, though entries are listed by authors' or editors' last names, by US MLA 8th edition conventions)</p>
+
+<ol class="biblio">
+<li class="biblio">Accademia della Crusca. Vocabolario della Crusca. 11 vols. Galileiana M. Cellini,1863-19. http://vocabolario.signum.sns.it/</li>
+<li class="biblio"><b>ARLIMA </b>(Archives de littérature du moyen âge). Dir. Laurent Brun, Université d’Ottawa.http://www.arlima.net/. Last consulted 21 November 2012.</li>
+<li class="biblio"><b>ARTFL</b> (American and French Research on the Treasury of the French Language). Dir. Robert Morrissey. http://artfl-project.uchicago.edu/ ). Last consulted 21 November 2012. DEAF Baldinger, Kurt, et al.</li>
+<li class="biblio"><b>DEAF</b>: Dictionnaire étymologique de l’ancien français. Niemeyer, 1974-. http://www.deaf-page.de/index.htm</li>
+<li class="biblio">Battaglia, Salvatore. Grande dizionario della lingua italiana. 21 vols. Gen. Ed., Giorgio Bárberi Squarotti. UTET, 1961-.</li>
+<li class="biblio"><b>DEI</b> Battisti, Carlo, and G. Alessio. Dizionario etimologico italiano. G. Barbera, 1950-57.</li>
+<li class="biblio"><b>TLIO</b> Beltrami, Pietro G., dir. Tesoro della Lingua Italiana delle Origini. http://tlio.ovi.cnr.it/TLIO/ (part of ARTFL databases (http://artfl-project.uchicago.edu/content/ovi-search-form in the US).</li>
+<li class="biblio">Bloch, O., and W. von Wartburg. Dictionnaire étymologique de la langue française. 2 vols. PUF, 1932.</li>
+<li class="biblio">Bourgain, Pascale, and Françoise Vieillard. Conseils pour l’édition des textes médiévaux. Fascicule III: Textes littéraires. Éd. du CTHS, École des chartes, 2002.</li>
+<li class="biblio">Brambilla Ageno, Franca. L'Edizione critica dei testi volgari. Antenore, 1975.</li>
+<li class="biblio">DELI Cortelazzo, Manlio, and Paolo Zolli. Dizionario etimologico della lingua italiana. Zanichelli, 1979-85.</li>
+<li class="biblio">Desole, Corinna. Repertorio ragionato dei personaggi citati nei principali cantari cavallerschi italiani. Edizioni dell’Orso, 1995.</li>
+<li class="biblio">DuCange, Domino, et. al. Glossarium mediæ et infimæ latinitatis. L. Favre, 1883-1887.</li>
+<li class="biblio"><b>FIOLA</b> (Franco-Italian on-line Archive). Dir. Leslie Zarker Morgan and David P. Bénéteau. http://loyolanotredamelib.org/fiola/. Last consulted 21 November 2012.</li>
+<li class="biblio">Flutre, Ferdinand. Table des noms propres avec toutes leur variantes, figurant dans les romans du moyen âge écrits en français ou en provençal et actuellement publiés ou analysés. Champion, 1966.</li>
+<li class="biblio">Foulet, Alfred, and Mary Blakely Speer. On Editing Old French Texts. Regents Press of Kansas, 1979.</li>
+<li class="biblio">Godefroy, Frédéric. Dictionnaire de l’ancienne langue française et de toutes ses dialectes, du IXe au XVe s. 10 vols. F. Vieweg, 1880-1902. Rep. Kraus.</li>
+<li class="biblio">Greimas, Algirdas Julien. Dictionnaire de l’ancien français. Larousse, 1992. (multiple editions).</li>
+<li class="biblio">Hindley, Alan, Frederick W. Langley, and Brian J. Levy. Old French-English Dictionary. Cambridge UP, 2006.</li>
+<li class="biblio">Lepage, Yvan G. Guide de l’édition de textes en ancien français. Champion, 2001.</li>
+<li class="biblio"><b>REW</b> Meyer-Lübke, Wilhelm. Romanisches etymologisches Wörterbuch. Winter, 1911 (and other editions). Available through http://archive.org/details/romanischesetymo00meyeuoft.</li>
+<li class="biblio">Modern Language Association of America. Guidelines for Editors of Scholarly Editions. Revised 29 June 2011. http://www.mla.org/Guidelines for Editors of Scholarly Editions. Last consulted 08/09/2017.</li>
+<li class="biblio">Moisan, André. Répertoire des noms propres de personnes et de lieux cités dans les chansons de geste françaises et les œuvres étrangères dérivées. 5 vols. Massot, 1986.</li>
+<li class="biblio"><b>LEI</b> Pfister, Max, et al. Lessico etimologico italiano. Reichert, 1984-.</li>
+<li class="biblio">Pope, Mildred K. From Latin to Modern French with Especial Consideration of Anglo-Norman. Phonology and Morphology. Manchester UP, 1934.</li>
+<li class="biblio"><b>RIALFrI</b> (Repertorio informatizzato antica letteratura franco-italiana). Dir. Francesca Gambino, Università di Padova. http://www.rialfri.eu/rialfriWP/. Last consulted 21 November 2012.</li>
+<li class="biblio">Rohlfs, Gerhard. Grammatica storica della lingua italiana e dei suoi dialetti. 3 vols. Einaudi, 1966.</li>
+<li class="biblio">Tobler, Adolf. Altfranzösisches Wörterbuch. Wiesbaden: Franz Steiner, 1969. Electronic version includes eds. Peter Blumenthal and Achim Stein. 2002. TL Tobler, Adolf, and Lommatzsch, E. Französisches etymologisches Wörterbuch. Franz Steiner, 1954- 63. (Sample at http://www.uni-stuttgart.de/lingrom/stein/tl/work/workfr.htm.)</li>
+<li class="biblio">Vieillard, Françoise, and Olivier Guyotjeannin, eds. Conseils pour l’édition des textes médiévaux. I. Fascicule I: conseils généraux. Paris: Éd. du CTHS: École des chartes, 2001.</li>
+<li class="biblio"><b>FEW</b> Wartburg, Walther von. Französisches etymologisches Wörterbuch. 25 vols. + Supp. F. Klopp, 1921-.</li>
+<li class="biblio">Zaccarello, Michelangelo. L'edizione critica del testo letterario. Primo corso di filologia italiana. Le Monnier, 2017.</li>
+</ol>
+</div>
+
+
+<div class="biblio">
+<h2 class="biblio">Secondary material: modern editions and critical literature</h2>
+
+<ol class="biblio">
+<li class="biblio">Allaire, Gloria. "Considerations on Huon d'Auvergne / Ugo d'Alvernia." Viator 32 (2001): 185-203.</li>
+<li class="biblio">Andrea da Barberino. Storia d'Ugone d'Alvernia. Ed. F. Zambrini. Romagnoli, 1882. rpt. Commissione per i testi di lingua, 1968.</li>
+<li class="biblio">Anglade, J. "Notice sur un manuscrit de Ugo d'Alvernia." Romania 45 (1918-19): 108-116.</li>
+<li class="biblio">Bartholomaeis, Vincenzo de. “ La Discesa di Ugo d'Alvernia all'inferno secondo il frammento di Giovanni Maria Barbieri.” Memorie. Classe di Scienze morali. Sezione di scienze storico- filologiche e sezioni di scienze giuridiche. Reale accademia delle scienze dell'Istituto di Bologna. Ser. 2, Vol. 10, Ser. 3 Vol 3. (1929): 3-54.</li>
+<li class="biblio">Bédier, Joseph, ed. Le Lai de l'Ombre par Jean Renart. Fribourg, 1890.</li>
+<li class="biblio">Bédier, Joseph, ed. Le Lai de l'Ombre par Jean Renart. SATF. Paris, 1907.</li>
+<li class="biblio">Bennett, Philip. "Guillaume d'Orange: Fighter of Demons and Harrower of Hell." Myth and Legend in French Literature. Essays in Honour of A. J. Steele. Ed. Keith Aspley, David Bellos, Peter Sharratt. The Modern Humanities Research Association, 1982. 24-46.</li>
+<li class="biblio">Bernstein, Alan E. The Formation of Hell. Death and Retribution in the Ancient and Early Christian Worlds. Cornell, 1993.</li>
+<li class="biblio">Bernstein, Alan E. Hell and Its Rivals. Death and Retribution among Christians, Jews, and Muslims in the Early Middle Ages. Cornell, 2017.</li>
+<li class="biblio">Borroni, Fabia. Le Carte Rajna della Biblioteca Marucelliana. Catalogo e Bibliografia. Sansoni, 1956. [lists Rajna=s transcription of Torino ms.]</li>
+<li class="biblio">Braghirolli, Willelmo, Gaston Paris, and Paul Meyer. "Inventaire des manuscrits en langue française possédés par Francesco Gonzaga I, capitaine de Mantoue, mort en 1407." Romania 9 (1880): 497-514.</li>
+<li class="biblio">Breeze, Andrew. "Sir John Paston on 'Ser Hughe Lavernoys'." Notes and Queries 48 (2001): 10-11.</li>
+<li class="biblio">Dante Alighieri. Commedia. Ed. Robert M. Durling and Ronald L. Martinez. 3 vols. Oxford UP, 1996- 2003-2011.</li>
+<li class="biblio">Dante Alighieri. Monarchia. Eng: On World Government. Trans. Herbert W. Schneider. Macmillan/Library of Liberal Arts, 1957.</li>
+<li class="biblio">Debenedetti, Santorre. "Intorno al testo del frammento Barbieri dell'Ugone d'Alvernia." Archivum Romanicum 14 (1930): 269-73.</li>
+<li class="biblio">Gardner, Eileen. Medieval Visions of Heaven and Hell. A Sourcebook. Garland Medieval Bibliographies, 1993.</li>
+<li class="biblio">Giacon, Carla. La redazione padovana dell'Huon d'Auvergne: Studio, Edizione, Glossario. Diss. Università degli studi, Padova. 1960-61.</li>
+<li class="biblio">Everson, Jane E. The Italian Romance Epic in the Age of Humanism. The Matter of Italy and the World of Rome. Oxford: U P, 2001.</li>
+<li class="biblio">Graf, A. “Di un poema inedito di Carlo Martello e di Ugo conte d'Alvernia.” Giornale di Filologia Romanza 1 (1878): 92-110.</li>
+<li class="biblio">Holden, Anthony J. Rev. of Günter Holtus, ed. La Versione franco-italiana della ‘Bataille d’Aliscans’: Codex Marcianus fr. VIII (=252). Tübingen: Niemeyer, 1985. Medium Ævum 56.2 (1987): 332- 34.</li>
+<li class="biblio">Holtus, Günter. "Considerazioni sulla lingua dell’« Huon d’Auvergne» (B, T, P)." Cultura dell’Italia padana e la presenza francese nei secoli XIII-XV. (Pavia, 11-14 settembre 1994). Ed. Luigina Morini. Edizioni dell’Orso, 2001. 41-54.</li>
+<li class="biblio">Holtus, Günter. "Ist das Franko-Italienische eine Sprache oder ein Dialekt?" Beiträge zum romanischen Mittelalter. Ed. Kurt Bldinger. Niemeyer, 79-97.</li>
+<li class="biblio">Holtus, Günter. Lexikalische Untersuchungen zur Interferenz: die franko-italienische Entrée d’Espagne. Niemeyer, 1979.</li>
+<li class="biblio">Holtus, Günter. "Les problèmes posés par l’édition de textes franco-italiens. À propos de quelques leçons problématiques de V 4, V 8, et d’autres manuscrits." Au Carrefour des routes d’Europe: La chanson de geste. Xe Congrès international de la Société Rencesvals pour l’étude des épopées romanes. Strasbourg 1985. Cuer Ma, 1987. Vol. 2, 675-96.</li>
+<li class="biblio">Holtus, Günter, ed. La Versione franco-italiana della ‘Bataille d’Aliscans’: Codex Marcianus fr. VIII (=252). Niemeyer, 1985. Beihefte zur Zeitschrift für romanische Philologie 205.</li>
+<li class="biblio">Holtus, Günter, and Peter Wunderli. Les Épopées Romanes. Dir. Rita Lejeune, Jeanne Wathelet-Willem, Henning
+Krauss. Tome 1 / 2, Fascicule 10. Grundriss der romanischen Literaturen des Mittelalters 10. Franco-italien et épopée franco-italienne. Winter, 2005.</li>
+<li class="biblio">Krauss, Henning. Epica feudale e pubblico borghese. Per la storia poetica di Carlomagno in Italia. Trans. Andrea Fassò. Liviana Editrice, 1980.</li>
+<li class="biblio">Ludovisi, Idido. L'Ugo d'Alvernia secondo il codice franco-italiano della biblioteca vescovile di Padova. Mele, 1895.</li>
+<li class="biblio">Mainone, Friedrich. Formenlehre und Syntax in der Berliner franco-venezianischen Chanson de geste von Huon d'Auvergne. Verlag Robert Noske, Borna Bez, 1936.</li>
+<li class="biblio">Mainone, Friedrich. Laut- und Formenlehre in der Berliner franco-venezianischen Chanson de geste von Huon d'Auvergne. Erster Teil: Reimprüfung und Lautlehre. Inaugural-Dissertation zur Erlangung der Doktorwürde. Berlin: Universitäts Buchdruckerei von Gustav Schade, 1911.</li>
+<li class="biblio">McCormick, Stephen P. "The ‘Franco-Italian’ Epic in Medieval Lombardia." Diss. U of Oregon, 2011.</li>
+<li class="biblio">McCormick, Stephen P. The Manuscript Tradition and Reception of the Huon d’Auvergne, a Franco-Italian romance-epic. The French of Italy.</li>
+<li class="biblio">McCormick, Stephen P. "Peregrinatio animae: Cartographic Spaces and Epistemological Debates in the Franco-Italian Huon
+d'Auvergne." Francigena 3 (2017): 79-109.</li>
+<li class="biblio">McCormick, Stephen P. "Les humanités numériques et la tradition manuscrite de Huon d'Auvergne." Actes du XXème Congrès
+International de la Société Rencesvals pour l'Étude des Épopées Romanes (Rome, Università di Roma- La
+Sapienzia, 20-24 juillet 2015). Eds. Maria Careri, Caterina Menichetti, and Maria Teresa Rachetta. Naples:
+Viella, 2017, pp. 571-78.</li>
+<li class="biblio">McCormick, Stephen P. "A Contextual Analysis of Two Franco-Italian Manuscripts of the Huon d'Auvergne Romance Epic."
+Digital Philology 5.2 (2016): 208-27.</li>
+<li class="biblio">McCormick, Stephen P. "A Guide to Digital Medieval Studies in North America." Le Moyen Âge en Amerique du Nord, Spec.
+issue of Perspectives Médiévales 37 (2016), www.peme.revues.org/9655, accessed 1 Apr. 2016.</li>
+<li class="biblio">McCormick, Stephen P. "Como fa la foja: Versions of Female Authority in the Huon d'Auvergne Manuscript Tradition." Italian
+Studies 70.1 (2015): 33-52.</li>
+<li class="biblio">McCormick, Stephen P. “Cartography and Epic in Florentine Humanism and Andrea da Barberino’s Ugone d’Alvernia.” Viator
+45.3 (2014): 339-62.</li>
+<li class="biblio">Meregazzi, Luisa A. "L'episodio del Prete Gianni nell'Ugo d'Alvernia." Studi romanzi 26 (1935): 5-69.</li>
+<li class="biblio">Meregazzi, Luisa A. "L'Ugo d'Alvernia: Poema Franco-Italiano." Studi romanzi 27 (1937): 5-87.</li>
+<li class="biblio">Millardet, G. "Rev: F. Mainone, Laut- und Formenlehre in der Berliner franco-venezianischen Chanson de geste von Huon d'Auvergne. Erster Teil: Reimprüfung und Lautlehre. Inaugural-Dissertation zur Erlangung der Doktorwürde. Berlin: Universitäts Buchdruckerei von Gustav Schade, 1911." Revue des langues modernes 55 (1912): 125-128.</li>
+<li class="biblio">Möhren, Frank Walt. «Huon d'Auvergne» / «Ugo d'Alvernia» : Objet de la lexicographie française ou italienne?" Medioevo Romanzo 4 (1977): 312-325.</li>
+<li class="biblio">Owen, D.D.R. The Vision of Hell: Infernal Journeys in Medieval French Literature. Barnes and Noble, 1970.</li>
+<li class="biblio">Rajna, Pio. Transcription of Padua Biblioteca del Seminario Vescovile Cod. 32 Biblioteca Marucelliana, Florence, Carte Rajna XII.M.101. Sala consultazione manoscritti e rari.</li>
+<li class="biblio">Rajna, Pio. Transcription of Torino N.III.19. Biblioteca Marucelliana, Florence, Carte Rajna XIX.15. Sala consultazione manoscritti e rari.</li>
+<li class="biblio">Renier, Rodolfo, ed. La Discesa di Ugo d'Alvernia allo inferno secondo il codice franco-italiano della Nazionale di Torino. Gaetano Romagnoli, 1883.</li>
+<li class="biblio">Scattolini, Michela G. "Ricerche sulla tradizione dell’Huon d’Auvergne." Diss. Siena Scuola di dottorato europea in filologia romanza, 2010.</li>
+<li class="biblio">Schwam-Baird, Shira, ed. and trans. "Valentin et Orson": An Edition and Translation of the FifteenthCentury Romance Epic. ACMRS, 2011.</li>
+<li class="biblio">Stengel, Edmund. "Eine weitere Textstelle aus der franco-venezianischen Chanson de geste von Huon d'Auvergne. (Nach der Berliner und der Turiner Handschrift)." Festschrift zum 13. Neuphilologentage. C. Meyer, 1908. 35-49.</li>
+<li class="biblio">Stengel, Edmund. "Huons von Auvergne Keuschheitsprobe, Episode aus der franco-venezianischen Chanson de geste von Huon d'Auvergne nach den drei erhaltenen Fassungen, der Berliner, Turiner und Paduaner." Mélanges... Wilmotte. Champion, 1910. 2: 685-713.</li>
+<li class="biblio">Stengel, Edmund. "Karl Martels Entführung in die Hölle und Wilhem Capets Wahl zu seinem Nachfolger. Stelle aus der Chanson von Huon d'Auvergne (1) nach der Berliner Hs." Studi letterari e linguistici dedicati a Pio Rajna nel quarantesimo anno del suo insegnamento. Hoepli, 1911. 873- 91.</li>
+<li class="biblio">Stengel, Edmund. "Roms Befreiung durch Huon d'Auvergne und dessen Tod. Schlussepisode (1) der franco-venezianischen 'Chanson' von Huon d'Auvergne. Text der Berliner Handschrift, zum ersten Mal veröffentlich." Miscellanea di Studi critici in onore di V. Crescini. Fratelli Stagni, 1927. 267-90.</li>
+<li class="biblio">Stengel, Edmund. Huon's aus Auvergne Höllenfahrt Nach der Berliner und Paduaner Hs. Festschrift der Universität Greifswald. F. W. Kunike, 1908.</li>
+<li class="biblio">Stengel, Edmund. Huons aus Auvergne Suche nach dem Holleneingang nach der Berliner Hs. Festschrift der Universität Greifswald. Emil Hartmann, 1912.</li>
+<li class="biblio">Stengel, Edmund. Rev. of Floovent-Studien. Untersuchungen zur altfranzösischen Epik. By Gustav Brockstedt. Kiel: Robert Cordes, 1907. In Zeitschrift für französische Sprache und Litteratur 33 (1908): 159-163. (Includes lines 2745-2796 in a note.)</li>
+<li class="biblio">Tobler, Adolf. "Die Berliner Handschrift des Huon d'Auvergne." Sitzungsberichte der königlich preussischen Akademie der Wissenschaften zu Berlin Phil.-hist. Kl. 27 (1884): 605-20.</li>
+<li class="biblio">Vallecalle, Jean-Claude. "Les chansons de geste franco-italiennes: héritage et réinterprétation d'une tradition littéraire." In Limine Romaniae. Chanson de geste et épopée européene. Ed. Carlos Alvar et Constance Carta. Lang, 2012. 61-90.</li>
+<li class="biblio">Vitale-Brovarone, Alessandro. "De la chanson de Huon d'Auvergne à la Storia di Ugone d'Avernia d'Andrea da Barberino: techniques et méthodes de la traduction et de l'élaboration." Charlemagne et l'épopée romane. Actes du VIIe Congrès international de la Société Rencesvals (Liège 28 août - 4 septembre 1976). Ed. Madeleine Tyssens and Claude Thiry. Les Belles lettres, 1978. 2:393-403.</li>
+<li class="biblio">Vitullo, Juliann M. The Chivalric Epic in Medieval Italy. U. Press of Florida, 2000.</li>
+</ol>
+</div>
+
+</body>
+
+</html>
+
+
+
+
+
+
+
+
+<!--- ZOTERO BIBLIOGRAPHY
+
+<!--main content
   <section class="row">
   <div class="large-8 large-offset-2 columns">
     <!-- Following line renders manually entered bibliography  -->
     <%#= render 'shared/old_bibliography' %>
-    <!-- Following line renders zotero bibliography -->
+    <!-- Following line renders zotero bibliography
     <%= render 'shared/zot_bibliography' %>
     </div>
   </section>
+
+-->
