--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -569,6 +569,24 @@ td {
     padding-left: 1.5em;
 }
 
+/* Bibliography Page */
+
+
+h2.biblio {
+    color: #5f0000;
+    margin-top: 4.3em;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+li.biblio {
+	padding-right: 15em;
+}
+
+.biblio {
+    float: left;
+}
+
+
 /* MS Introduction Pages */
 
 img#ms-intro {
