SPM create biblio_temp page

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -4,7 +4,7 @@
 
         <li class="title"><%= link_to "Huon d'Auvergne Digital Archive", root_path(), class: "nav" %></li>
 
-        <li><%= link_to 'Bibliography', bibliography_path(), class: "nav" %></a></li>
+        <li><%= link_to 'Bibliography', biblio_temp_path(), class: "nav" %></a></li>
 
         <li class="dropdown">
           <a class="nav" href="javascript:void(0)" class="dropbtn">Editions</a>
