--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -571,19 +571,40 @@ td {
 
 /* Bibliography Page */
 
+h1.biblio {
+	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    color: #5f0000;
+    font-weight: 600;
+    line-height: 1.3;
+    margin-top: 3em;
+    margin-bottom: 1em;
+}
 
 h2.biblio {
-    color: #5f0000;
-    margin-top: 4.3em;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    color: #5f0000;
+    font-weight: 600;
+    line-height: 1.3;
+    margin-bottom: 1em;
 }
 
 li.biblio {
-	padding-right: 15em;
+    padding-right: 25%;
+    padding-left: 2em;
+    text-indent: -2em;
+    padding-top: 0.5em;
+}
+
+ul.biblio {
+	list-style: none;
 }
 
 .biblio {
     float: left;
+}
+
+.bibl-section {
+	float: left;
 }
 
 
