--- a/app/views/layouts/_reading_interface.html.erb
+++ b/app/views/layouts/_reading_interface.html.erb
@@ -2,7 +2,7 @@
             <div id="sub-title">
                 <%= @short_title %>
                 <!-- Stub because title is so long -->
-                <%#= @title %>
+                <%= @title %>
             </div>
             <div id="reader-nav-links">
                 <%= t(page_entries_info(@line_groups))%>
