--- a/app/views/layouts/_reading_interface.html.erb
+++ b/app/views/layouts/_reading_interface.html.erb
@@ -1,9 +1,9 @@
 <div id="reader-nav">
-            <div id="sub-title">
-                <%= @short_title %>
-                <!-- Stub because title is so long -->
-                <%= @title %>
+
+            <div id="reader-nav-title">
+                    <%= @city %>, <%= @repository %> <%= @shelflisting %>
             </div>
+
             <div id="reader-nav-links">
                 <%= t(page_entries_info(@line_groups))%>
                     </a>
