SPM update PEB profile link on intro page

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,4 +1,14 @@
 
+<!DOCTYPE html>
+<html>
+<head>
+  
+  <script type="text/javascript"></script>
+
+</head>
+<body>
+
+
 <div class="container">
 
 <div class="row">
@@ -49,7 +59,7 @@
               <div class="participant_section">
                 <a href="http://history.arizona.edu/alan-bernstein">Alan Bernstein</a> (University of Arizona)<br>
                 <a href="http://ciham.ish-lyon.cnrs.fr/membres/jean-claude-vallecalle">Jean-Claude Vallecalle</a> (Université Lumière Lyon 2)<br>
-                <a href="http://www.ed.ac.uk/literatures-languages-cultures/delc/french/staff/philip-bennett">Philip E. Bennett</a> (University of Edinburgh)<br>
+                <a href="http://www.ed.ac.uk/profile/philip-bennett">Philip E. Bennett</a> (University of Edinburgh)<br>
                 <a href="http://independent.academia.edu/MichelaGScattolini">Michela G. Scattolini</a> (Genoa, Italy; Independent researcher)</div>
 
             <h5 id="sub-header">Collaborating Institutions</h5>
@@ -83,5 +93,8 @@
     </div>
 
 </div>
+
+</body>
+</html>
 
 <%= render 'layouts/footer' %>
